--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   "homepage": "https://github.com/dfgdfgertt/Api-spec-of-Vani#readme",
   "dependencies": {
     "asciidoctor": "^3.0.2",
+    "asciidoctor.js": "^1.5.9",
     "fs": "^0.0.1-security",
+    "pdf-extract": "^1.0.11",
     "pdf-to-text": "^0.0.7",
-    "pdf2json": "^3.0.4"
+    "pdf2json": "^3.0.4",
+    "pdfjs-dist": "^3.7.107",
+    "pdfreader": "^0.1.4"
   }
 }
